Fix import to reflect new structure

--- a/dense_feature_mixer/examples/testing.ipynb
+++ b/dense_feature_mixer/examples/testing.ipynb
@@ -14,7 +14,7 @@
     "from tensorflow.keras import layers\n",
     "from tensorflow.keras.callbacks import ModelCheckpoint\n",
     "from sklearn.metrics import log_loss\n",
-    "from DenseFeatureMixer import DenseFeatureMixer\n",
+    "from dense_feature_mixer import DenseFeatureMixer\n",
     "from enum import Enum"
    ]
   },
