--- a/dense_feature_mixer/examples/titanic.ipynb
+++ b/dense_feature_mixer/examples/titanic.ipynb
@@ -2,59 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.compose import make_column_transformer\n",
     "from sklearn.preprocessing import StandardScaler, OrdinalEncoder\n",
     "from sklearn.datasets import fetch_openml\n",
     "\n",
     "from dense_feature_mixer import DenseFeatureMixer\n",
+    "from dense_feature_mixer.compose import ColumnTransformerWithNames\n",
     "\n",
     "\n",
     "X, y = fetch_openml(\"titanic\", version=1, return_X_y=True, as_frame=True)\n",
     "X = X.drop([\"name\", \"ticket\", \"cabin\", \"boat\", \"body\"], axis=1).dropna()\n",
     "y = y.reindex(X.index).astype(int)\n",
     "numeric_vars = [\"age\", \"fare\"]\n",
-    "categorical_vars = [\"sex\", \"sibsp\", \"parch\", \"embarked\", \"home.dest\", \"pclass\"]\n",
+    "categorical_vars = [\"sex\", \"pclass\", \"parch\", \"embarked\"]\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.7591240875912408"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean score: 0.80 (0.02)\n"
+     ]
     }
    ],
    "source": [
-    "encoder = OrdinalEncoder(handle_unknown=\"use_encoded_value\", unknown_value=999)\n",
-    "X_train[categorical_vars] = encoder.fit_transform(X_train[categorical_vars])\n",
-    "X_test[categorical_vars] = encoder.transform(X_test[categorical_vars])\n",
+    "ordinal_encoder = OrdinalEncoder(handle_unknown=\"use_encoded_value\", unknown_value=999)\n",
+    "col_transformer = ColumnTransformerWithNames([(\"num_transformer\", StandardScaler(), numeric_vars), \n",
+    "                                              (\"cat_transformer\", ordinal_encoder, categorical_vars)],\n",
+    "                                             remainder=\"drop\")\n",
     "\n",
-    "num_transformer = make_column_transformer((StandardScaler(), numeric_vars), remainder=\"passthrough\")\n",
-    "\n",
-    "pipe = make_pipeline(DenseFeatureMixer(task=\"classification\",\n",
+    "pipe = make_pipeline(col_transformer,\n",
+    "                     DenseFeatureMixer(task=\"classification\",\n",
     "                                       categorical_vars=categorical_vars,\n",
     "                                       unknown_category=999),\n",
-    "                     num_transformer,\n",
     "                     LogisticRegression())\n",
     "pipe.fit(X_train, y_train)\n",
-    "pipe.score(X_test, y_test)"
+    "\n",
+    "cv_score = cross_val_score(pipe, X_train, y_train, cv=3)\n",
+    "print(f\"Mean score: {cv_score.mean():.2f} ({cv_score.std():.2f})\")"
    ]
   },
   {
