--- a/dense_feature_mixer/examples/titanic.ipynb
+++ b/dense_feature_mixer/examples/titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean score: 0.80 (0.02)\n"
+      "Mean score: 0.80 (0.03)\n"
      ]
     }
    ],
@@ -49,7 +49,7 @@
     "                                       categorical_vars=categorical_vars,\n",
     "                                       unknown_category=999),\n",
     "                     LogisticRegression())\n",
-    "pipe.fit(X_train, y_train)\n",
+    "#pipe.fit(X_train, y_train)\n",
     "\n",
     "cv_score = cross_val_score(pipe, X_train, y_train, cv=3)\n",
     "print(f\"Mean score: {cv_score.mean():.2f} ({cv_score.std():.2f})\")"
