Encode by default

--- a/dense_feature_mixer/examples/titanic.ipynb
+++ b/dense_feature_mixer/examples/titanic.ipynb
@@ -8,8 +8,10 @@
    "source": [
     "from sklearn.model_selection import train_test_split, cross_val_score\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.preprocessing import StandardScaler, OrdinalEncoder\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
     "from sklearn.datasets import fetch_openml\n",
     "\n",
     "from dense_feature_mixer import DenseFeatureMixer\n",
@@ -17,7 +19,7 @@
     "\n",
     "\n",
     "X, y = fetch_openml(\"titanic\", version=1, return_X_y=True, as_frame=True)\n",
-    "X = X.drop([\"name\", \"ticket\", \"cabin\", \"boat\", \"body\"], axis=1).dropna()\n",
+    "X = X.drop([\"name\", \"ticket\", \"cabin\", \"boat\", \"body\"], axis=1)\n",
     "y = y.reindex(X.index).astype(int)\n",
     "numeric_vars = [\"age\", \"fare\"]\n",
     "categorical_vars = [\"sex\", \"pclass\", \"parch\", \"embarked\"]\n",
@@ -34,22 +36,86 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean score: 0.80 (0.03)\n"
+      "Mean score: 0.78 (0.04)\n"
      ]
     }
    ],
    "source": [
-    "ordinal_encoder = OrdinalEncoder(handle_unknown=\"use_encoded_value\", unknown_value=999)\n",
-    "col_transformer = ColumnTransformerWithNames([(\"num_transformer\", StandardScaler(), numeric_vars), \n",
-    "                                              (\"cat_transformer\", ordinal_encoder, categorical_vars)],\n",
-    "                                             remainder=\"drop\")\n",
+    "dfm = DenseFeatureMixer(task=\"classification\", encode=True, unknown_category=999)\n",
+    "num_pipe = make_pipeline(SimpleImputer(strategy=\"mean\"), StandardScaler())\n",
+    "cat_pipe = make_pipeline(SimpleImputer(strategy=\"most_frequent\"), dfm)\n",
+    "col_transformer = ColumnTransformer([(\"num_transformer\", num_pipe, numeric_vars),\n",
+    "                                     (\"cat_transformer\", cat_pipe, categorical_vars)])\n",
     "\n",
     "pipe = make_pipeline(col_transformer,\n",
-    "                     DenseFeatureMixer(task=\"classification\",\n",
-    "                                       categorical_vars=categorical_vars,\n",
-    "                                       unknown_category=999),\n",
     "                     LogisticRegression())\n",
-    "#pipe.fit(X_train, y_train)\n",
+    "\n",
+    "cv_score = cross_val_score(pipe, X_train, y_train, cv=3)\n",
+    "print(f\"Mean score: {cv_score.mean():.2f} ({cv_score.std():.2f})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean score: nan (nan)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\41801990\\Documents\\Code\\Dense-Feature-Mixer\\dense_feature_mixer\\core.py:135: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  X_copy[self._categorical_vars] = self._ordinal_encoder.fit_transform(X_copy[self._categorical_vars])\n",
+      "c:\\Users\\41801990\\Documents\\Code\\Dense-Feature-Mixer\\dense_feature_mixer\\core.py:135: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  X_copy[self._categorical_vars] = self._ordinal_encoder.fit_transform(X_copy[self._categorical_vars])\n",
+      "c:\\Users\\41801990\\Documents\\Code\\Dense-Feature-Mixer\\dense_feature_mixer\\core.py:135: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  X_copy[self._categorical_vars] = self._ordinal_encoder.fit_transform(X_copy[self._categorical_vars])\n",
+      "C:\\Users\\41801990\\Envs\\Dense-Feature-Mixer\\lib\\site-packages\\sklearn\\model_selection\\_validation.py:372: FitFailedWarning: \n",
+      "3 fits failed out of a total of 3.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "3 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\41801990\\Envs\\Dense-Feature-Mixer\\lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 680, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"C:\\Users\\41801990\\Envs\\Dense-Feature-Mixer\\lib\\site-packages\\sklearn\\pipeline.py\", line 390, in fit\n",
+      "    Xt = self._fit(X, y, **fit_params_steps)\n",
+      "  File \"C:\\Users\\41801990\\Envs\\Dense-Feature-Mixer\\lib\\site-packages\\sklearn\\pipeline.py\", line 355, in _fit\n",
+      "    **fit_params_steps[name],\n",
+      "  File \"C:\\Users\\41801990\\Envs\\Dense-Feature-Mixer\\lib\\site-packages\\joblib\\memory.py\", line 349, in __call__\n",
+      "    return self.func(*args, **kwargs)\n",
+      "  File \"C:\\Users\\41801990\\Envs\\Dense-Feature-Mixer\\lib\\site-packages\\sklearn\\pipeline.py\", line 893, in _fit_transform_one\n",
+      "    res = transformer.fit_transform(X, y, **fit_params)\n",
+      "  File \"C:\\Users\\41801990\\Envs\\Dense-Feature-Mixer\\lib\\site-packages\\sklearn\\base.py\", line 855, in fit_transform\n",
+      "    return self.fit(X, y, **fit_params).transform(X)\n",
+      "  File \"c:\\Users\\41801990\\Documents\\Code\\Dense-Feature-Mixer\\dense_feature_mixer\\core.py\", line 135, in fit\n",
+      "    X_copy[self._categorical_vars] = self._ordinal_encoder.fit_transform(X_copy[self._categorical_vars])\n",
+      "IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices\n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfm = DenseFeatureMixer(task=\"classification\", categorical_vars=categorical_vars, \n",
+    "                        numeric_vars=numeric_vars, encode=True, unknown_category=999)\n",
+    "num_pipe = make_pipeline(SimpleImputer(strategy=\"mean\"), StandardScaler())\n",
+    "cat_transformer = SimpleImputer(strategy=\"most_frequent\")\n",
+    "col_transformer = ColumnTransformerWithNames([(\"num_transformer\", num_pipe, numeric_vars),\n",
+    "                                              (\"cat_transformer\", cat_transformer, categorical_vars)])\n",
+    "\n",
+    "pipe = make_pipeline(col_transformer,\n",
+    "                     dfm,\n",
+    "                     LogisticRegression())\n",
     "\n",
     "cv_score = cross_val_score(pipe, X_train, y_train, cv=3)\n",
     "print(f\"Mean score: {cv_score.mean():.2f} ({cv_score.std():.2f})\")"
