Allow specifying hidden dense layers and dropout

--- a/dense_feature_mixer/examples/titanic.ipynb
+++ b/dense_feature_mixer/examples/titanic.ipynb
@@ -23,24 +23,24 @@
     "numeric_vars = [\"age\", \"fare\"]\n",
     "categorical_vars = [\"sex\", \"pclass\", \"parch\", \"embarked\"]\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean score: 0.78 (0.02)\n"
+      "Mean score: 0.78 (0.01)\n"
      ]
     }
    ],
    "source": [
-    "dfm = DenseFeatureMixer(task=\"classification\", encode=True, unknown_category=999)\n",
+    "dfm = DenseFeatureMixer(task=\"classification\", encode=True, unknown_category=999, epochs=20)\n",
     "num_pipe = make_pipeline(SimpleImputer(strategy=\"mean\"), StandardScaler())\n",
     "cat_pipe = make_pipeline(SimpleImputer(strategy=\"most_frequent\"), dfm)\n",
     "col_transformer = ColumnTransformer([(\"num_transformer\", num_pipe, numeric_vars),\n",
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean score: 0.77 (0.02)\n"
+      "Mean score: 0.78 (0.02)\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
     "from dense_feature_mixer.compose import ColumnTransformerWithNames\n",
     "\n",
     "dfm = DenseFeatureMixer(task=\"classification\",\n",
-    "                        numeric_vars=numeric_vars, encode=True, unknown_category=999)\n",
+    "                        numeric_vars=numeric_vars, encode=True, unknown_category=999, epochs=20)\n",
     "num_pipe = make_pipeline(SimpleImputer(strategy=\"mean\"), StandardScaler())\n",
     "cat_transformer = SimpleImputer(strategy=\"most_frequent\")\n",
     "col_transformer = ColumnTransformerWithNames([(\"num_transformer\", num_pipe, numeric_vars),\n",
