--- a/embedding_encoder/examples/titanic.ipynb
+++ b/embedding_encoder/examples/titanic.ipynb
@@ -14,7 +14,7 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.datasets import fetch_openml\n",
     "\n",
-    "from dense_feature_mixer import DenseFeatureMixer\n",
+    "from embedding_encoder import EmbeddingEncoder\n",
     "\n",
     "\n",
     "X, y = fetch_openml(\"titanic\", version=1, return_X_y=True, as_frame=True)\n",
@@ -28,21 +28,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean score: 0.78 (0.01)\n"
+      "Mean score: 0.78 (0.02)\n"
      ]
     }
    ],
    "source": [
-    "dfm = DenseFeatureMixer(task=\"classification\", encode=True, unknown_category=999, epochs=20)\n",
+    "ee = EmbeddingEncoder(task=\"classification\", encode=True, unknown_category=999, epochs=20)\n",
     "num_pipe = make_pipeline(SimpleImputer(strategy=\"mean\"), StandardScaler())\n",
-    "cat_pipe = make_pipeline(SimpleImputer(strategy=\"most_frequent\"), dfm)\n",
+    "cat_pipe = make_pipeline(SimpleImputer(strategy=\"most_frequent\"), ee)\n",
     "col_transformer = ColumnTransformer([(\"num_transformer\", num_pipe, numeric_vars),\n",
     "                                     (\"cat_transformer\", cat_pipe, categorical_vars)])\n",
     "\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,9 +67,9 @@
     }
    ],
    "source": [
-    "from dense_feature_mixer.compose import ColumnTransformerWithNames\n",
+    "from embedding_encoder.compose import ColumnTransformerWithNames\n",
     "\n",
-    "dfm = DenseFeatureMixer(task=\"classification\",\n",
+    "ee = EmbeddingEncoder(task=\"classification\",\n",
     "                        numeric_vars=numeric_vars, encode=True, unknown_category=999, epochs=20)\n",
     "num_pipe = make_pipeline(SimpleImputer(strategy=\"mean\"), StandardScaler())\n",
     "cat_transformer = SimpleImputer(strategy=\"most_frequent\")\n",
@@ -77,7 +77,7 @@
     "                                              (\"cat_transformer\", cat_transformer, categorical_vars)])\n",
     "\n",
     "pipe = make_pipeline(col_transformer,\n",
-    "                     dfm,\n",
+    "                     ee,\n",
     "                     LogisticRegression())\n",
     "\n",
     "cv_score = cross_val_score(pipe, X_train, y_train, cv=3)\n",
