OrdinalEncoder starting at 1

--- a/embedding_encoder/examples/titanic.ipynb
+++ b/embedding_encoder/examples/titanic.ipynb
@@ -35,12 +35,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean score: 0.78 (0.02)\n"
+      "Mean score: 0.79 (0.00)\n"
      ]
     }
    ],
    "source": [
-    "ee = EmbeddingEncoder(task=\"classification\", encode=True, unknown_category=999, epochs=20)\n",
+    "ee = EmbeddingEncoder(task=\"classification\", epochs=10)\n",
     "num_pipe = make_pipeline(SimpleImputer(strategy=\"mean\"), StandardScaler())\n",
     "cat_pipe = make_pipeline(SimpleImputer(strategy=\"most_frequent\"), ee)\n",
     "col_transformer = ColumnTransformer([(\"num_transformer\", num_pipe, numeric_vars),\n",
@@ -62,15 +62,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean score: 0.78 (0.02)\n"
+      "Mean score: 0.78 (0.01)\n"
      ]
     }
    ],
    "source": [
     "from embedding_encoder.compose import ColumnTransformerWithNames\n",
     "\n",
-    "ee = EmbeddingEncoder(task=\"classification\",\n",
-    "                        numeric_vars=numeric_vars, encode=True, unknown_category=999, epochs=20)\n",
+    "ee = EmbeddingEncoder(task=\"classification\", numeric_vars=numeric_vars,\n",
+    "                      epochs=10)\n",
     "num_pipe = make_pipeline(SimpleImputer(strategy=\"mean\"), StandardScaler())\n",
     "cat_transformer = SimpleImputer(strategy=\"most_frequent\")\n",
     "col_transformer = ColumnTransformerWithNames([(\"num_transformer\", num_pipe, numeric_vars),\n",
