Update example notebook

--- a/embedding_encoder/examples/rossmann.ipynb
+++ b/embedding_encoder/examples/rossmann.ipynb
@@ -194,8 +194,7 @@
       ],
       "source": [
         "print(\"Model using Ordinal Encoder\")\n",
-        "print(f\"Root Mean Squeared Error: {mean_squared_error(y_test, ordinal_preds, squared=False)}\")\n",
-        "print(f\"Mean Absolute Percentage Error: {mean_absolute_percentage_error(y_test, ordinal_preds)}\")"
+        "print(f\"Root Mean Squeared Error: {mean_squared_error(y_test, ordinal_preds, squared=False)}\")"
       ]
     },
     {
@@ -221,8 +220,7 @@
       ],
       "source": [
         "print(\"Model using Embbeding Encoder\")\n",
-        "print(f\"Root Mean Squeared Error: {mean_squared_error(y_test, embedding_preds, squared=False)}\")\n",
-        "print(f\"Mean Absolute Percentage Error: {mean_absolute_percentage_error(y_test, embedding_preds)}\")"
+        "print(f\"Root Mean Squeared Error: {mean_squared_error(y_test, embedding_preds, squared=False)}\")"
       ]
     },
     {
